--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@ li {
  LAYOUT
  ========== */
 .container {
-  width: 82.93%;
+  width: 311px;
   margin: 72px auto 62px auto;
   box-shadow: 0px 15px 30px rgba(0, 81, 171, 0.148847);
   border-radius: 5px;
@@ -143,7 +143,7 @@ main {
 /* ==========
  MEDIA QUERIES
  ========== */
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   /* ==========
  TYPOGRAPHY
  ========== */
@@ -201,7 +201,7 @@ main {
  LAYOUT
  ========== */
   .container {
-    width: 44.097%;
+    width: 635px;
     margin: 163px auto 162px auto;
     box-shadow: 0px 15px 30px rgba(0, 81, 171, 0.148847);
     border-radius: 5px;
